--- a/index.html
+++ b/index.html
@@ -4,16 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
-    <header>
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h3 class="nav-tittle">Ma<span class="nav-primary">r</span>y</h3>
+            <ul>
+                <li><a href="">Blog</a></li>
+                <li><a href=""></a>Portfolio</li>
+                <li><a href=""></a><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
+
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-gretings">Hi, I  am</h3>
+
+                <h1 class="banner-head">Mary Hardy</h1>
+
+                <p class="banner-content">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+
+            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary">Contact</button>
+
+            </div>
+
+            
+
+            <img class="banner-pp" src="./images/hardy.png" alt="">
+        </div>
 
     </header>
 
     <main>
 
     </main>
-    
+
     <footer>
 
     </footer>
