--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-bg">
         <nav>
             <h3 class="nav-tittle">Ma<span class="nav-primary">r</span>y</h3>
             <ul>
@@ -41,7 +41,63 @@
     </header>
 
     <main>
+        <section class="about secondary-bg">
+            <h3 class="section-tittle">About Me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
 
+            <div class="about-iteams">
+                <div class="about-iteam">
+                    <p class="about-tittle">Name</p>
+                    <p class="about-des">Mary</p>
+                </div>
+                <div class="about-iteam">
+                    <p class="about-tittle">Email</p>
+                    <p class="about-des">mdziarulhaque@gmail.com</p>
+                </div>
+                <div class="about-iteam">
+                    <p class="about-tittle">Date of birth</p>
+                    <p class="about-des"> 30 may 2203</p>
+                </div>
+                <div class="about-iteam">
+                    <p class="about-tittle">From</p>
+                    <p class="about-des">Lalmonirhat</p>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- what is do this section -->
+         <section class="skills">
+            <h3 class="section-tittle text-center">What I do</h3>
+            <p class="section-des text-center">
+               I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio. 
+            </p>
+
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="./images/icons/js.png" alt="">
+                    <h4 class="skill-tittle">Vanilla JavaScript</h4>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/react.png" alt="">
+                    <h4 class="skill-tittle">React</h4>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/nodejs.png" alt="">
+                    <h4 class="skill-tittle">Node.js</h4>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/mongo.png" alt="">
+                    <h4 class="skill-tittle">MongoDB</h4>
+                    <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+         </section>
     </main>
 
     <footer>
